2.25.90

2009-02-02  Johannes Schmid  <jhs@gnome.org>

	* NEWS: Updated
	* configure.in:
	- Bumped version to 2.25.90
	- Changed glade requirement to 3.5.7

2009-02-02  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/Makefile.am:
	* plugins/file-manager/file-view.c:
	Show all VCS icons (there was some Makefile problem and a off-by-one in the
	string array.
	(#561370 – there is no way to know which files are in repository and which not.)

2009-02-02  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/anjuta-bookmarks.c:
	* plugins/language-manager/plugin.c (load_languages):
	Cleanup XML-Parser correctly

2009-02-02  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/plugin.c (file_manager_set_default_uri),
	(on_gconf_notify_root), (on_gconf_notify), (file_manager_activate):
	#566800 – Had a random crash in "File manager" preferences pane (avoid
	flickering when a project is open)

2009-02-02  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/document-manager/search-box.c (on_incremental_search),
	(on_search_activated):
	* plugins/language-support-cpp-java/cpp-java-assist.c
	(on_assist_chosen):
	* plugins/scintilla/text_editor.c (iselection_set),
	(iselection_iface_init):
	* plugins/search/search-replace.c (search_and_replace):
	* plugins/search/search-replace_backend.c (create_search_entries):
	* plugins/sourceview/sourceview.c (set_select), (iselect_block),
	(iselect_set), (iselect_iface_init):
	#569908 – completion of symbol shouldn't scroll the editor

2009-02-02  Johannes Schmid  <jhs@gnome.org>

	* manuals/anjuta-manual/C/glade.xml:
	Added missing file
	
	* plugins/project-manager/gbf-project-util.c (error_dialog):
	Show correct markup

2009-02-02  Jens Georg  <mail@jensge.org>

	* plugins/gbf-am/gbf-am-project.c (uri_is_parent), (uri_normalize),
	(uri_get_chrooted_path):
	* plugins/gbf-mkfile/gbf-mkfile-project.c (uri_is_parent),
	(uri_get_chrooted_path):
	